feat: initial commit for idp org sync settings

--- a/site/tsconfig.json
+++ b/site/tsconfig.json
@@ -16,7 +16,10 @@
 		"skipLibCheck": true,
 		"strict": true,
 		"target": "es2020",
-		"baseUrl": "src/"
+		"baseUrl": "src/",
+		"paths": {
+			"@/*": ["./*"]
+		}
 	},
 	"include": ["**/*.ts", "**/*.tsx"],
 	"exclude": ["node_modules/", "_jest"],
